; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/bfd/extr_elf32-mips.c_mips_vxworks_bfd_reloc_type_lookup.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/bfd/extr_elf32-mips.c_mips_vxworks_bfd_reloc_type_lookup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@mips_vxworks_copy_howto_rela = common dso_local global i32 0, align 4
@mips_vxworks_jump_slot_howto_rela = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32)* @mips_vxworks_bfd_reloc_type_lookup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @mips_vxworks_bfd_reloc_type_lookup(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %9 [
    i32 129, label %7
    i32 128, label %8
  ]

7:                                                ; preds = %2
  store i32* @mips_vxworks_copy_howto_rela, i32** %3, align 8
  br label %13

8:                                                ; preds = %2
  store i32* @mips_vxworks_jump_slot_howto_rela, i32** %3, align 8
  br label %13

9:                                                ; preds = %2
  %10 = load i32*, i32** %4, align 8
  %11 = load i32, i32* %5, align 4
  %12 = call i32* @bfd_elf32_bfd_reloc_type_lookup(i32* %10, i32 %11)
  store i32* %12, i32** %3, align 8
  br label %13

13:                                               ; preds = %9, %8, %7
  %14 = load i32*, i32** %3, align 8
  ret i32* %14
}

declare dso_local i32* @bfd_elf32_bfd_reloc_type_lookup(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
